--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -16,16 +16,24 @@
                 "types":
                 [
                         {
-                                "type": "egg",
-                                "file-pattern": "*.egg",
+                                "name": "egg",
+                                "match-extension": "egg",
+                                "do-hash": true,
                                 "do-nearline": true,
                                 "nearline-cmd": "echo \"here's an egg file\""
                         },
                         {
-                                "type": "rsa-mat",
-                                "file-pattern": "*.mat",
+                                "name": "rsa-mat",
+                                "match-extension": "mat",
+                                "do-hash": true,
                                 "do-nearline": true,
                                 "nearline-cmd": "echo \"here's an RSA MAT file\""
+                        },
+                        {
+                                "name": "regexp-example",
+                                "match-regexp": "project8is",
+                                "do-hash": false,
+                                "do-nearline": false
                         }
                 ]
         },
