Moved FileInfo struct to its own file; Allow fatal and non-fatal errors returned from modules; Other minor improvements

--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -41,7 +41,8 @@
                                 "do-hash": false,
                                 "do-nearline": false
                         }
-                ]
+                ],
+                "require-hash": false
         },
 
         "mover":
