Added amqp.go; Implemented AmqpRecever to the extent that it can receive, but not handle, incoming messages; Minor other fixes

--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -6,8 +6,24 @@
                 "n-shippers": 1
         },
 
+        "amqp":
+        {
+                "broker": "higgsino.physics.ucsb.edu",
+                "receiver":
+                {
+                        "active": true,
+                        "exchange": "requests",
+                        "queue": "hornet"
+                },
+                "sender":
+                {
+                        "active": false
+                }
+        },
+
         "watcher":
         {
+                "active": true,
                 "dir": "/home/nsoblath/Project8/hornet"
         },
 
