--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -1,77 +1,77 @@
 {
-        "scheduler":
-        {
-                "queue-size": 100,
-                "n-nearline-workers": 5,
-                "n-shippers": 1
-        },
+    "scheduler":
+    {
+        "queue-size": 100,
+        "n-nearline-workers": 5,
+        "n-shippers": 1
+    },
 
-        "amqp":
+    "amqp":
+    {
+        "broker": "my.server",
+        "exchange": "requests",
+        "receiver":
         {
-                "broker": "my.broker",
-                "receiver":
-                {
-                        "active": true,
-                        "exchange": "requests",
-                        "queue": "hornet"
-                },
-                "sender":
-                {
-                        "active": false
-                }
+            "active": true,
+            "queue": "hornet"
         },
-
-        "watcher":
+        "sender":
         {
-                "active": true,
-                "dir": "/data"
-        },
-
-        "classifier":
-        {
-                "types":
-                [
-                        {
-                                "name": "egg",
-                                "match-extension": "egg",
-                                "do-hash": true,
-                                "do-nearline": true,
-                                "nearline-cmd": "echo \"here's an egg file\""
-                        },
-                        {
-                                "name": "rsa-mat",
-                                "match-extension": "mat",
-                                "do-hash": true,
-                                "do-nearline": true,
-                                "nearline-cmd": "echo \"here's an RSA MAT file\""
-                        },
-                        {
-                                "name": "rsa-setup",
-                                "match-extension": "Setup",
-                                "do-hash": false,
-                                "do-nearline": false
-                        },
-                        {
-                                "name": "regexp-example",
-                                "match-regexp": "project8is[A-Za-z]*",
-                                "do-hash": false,
-                                "do-nearline": false
-                        }
-                ],
-                "require-hash": false
-        },
-
-        "mover":
-        {
-                "dest-dir": "/home/me/mover-dest"
-        },
-
-        "workers":
-        {
-        },
-
-        "shipper":
-        {
-                "dest-dir": "/home/me/rsync-dest"
+            "active": true
         }
+    },
+
+    "watcher":
+    {
+        "active": true,
+        "dir": "/data"
+    },
+
+    "classifier":
+    {
+        "types":
+        [
+            {
+                "name": "egg",
+                "match-extension": "egg",
+                "do-hash": true,
+                "do-nearline": true,
+                "nearline-cmd": "echo \"here's an egg file\""
+            },
+            {
+                "name": "rsa-mat",
+                "match-extension": "mat",
+                "do-hash": true,
+                "do-nearline": true,
+                "nearline-cmd": "echo \"here's an RSA MAT file\""
+            },
+            {
+                "name": "rsa-setup",
+                "match-extension": "Setup",
+                "do-hash": false,
+                "do-nearline": false
+            },
+            {
+                "name": "regexp-example",
+                "match-regexp": "project8is[A-Za-z]*",
+                "do-hash": false,
+                "do-nearline": false
+            }
+        ],
+        "require-hash": false
+    },
+
+    "mover":
+    {
+        "dest-dir": "/warm-data"
+    },
+
+    "workers":
+    {
+    },
+
+    "shipper":
+    {
+        "dest-dir": "/remote-data"
+    }
 }
