Added configurable time for the classifier to wait on the sender; Only do hash if it's requested for the file type

--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -57,7 +57,8 @@
                 "do-hash": false,
                 "do-nearline": false
             }
-        ]
+        ],
+	"wait-for-sender": 1
     },
 
 	"hash":
