--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -17,7 +17,8 @@
         },
         "sender":
         {
-            "active": true
+            "active": true,
+            "replyto": "hornet"
         }
     },
 
