Added facility to deal with base paths; Relative-to-base shipping now works, but only for local shipping

--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -51,7 +51,12 @@
                 "do-nearline": false
             }
         ],
-	"wait-for-sender": 1
+		"base-paths":
+		[
+			"/some/special/path",
+			"/another/path"
+		],
+		"wait-for-sender": 2
     },
 
 	"hash":
