--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -26,22 +26,17 @@
         [
             {
                 "name": "egg",
-                "match-extension": "egg",
+                "match-regexp": "runid(?P<run_id>[0-9]*)_(?P<fname_other>[A-Za-z0-9_]*).egg",
                 "do-hash": true
             },
             {
                 "name": "rsa-mat",
-                "match-extension": "mat",
+                "match-regexp": "runid(?P<run_id>[0-9]*)_(?P<fname_other>[A-Za-z0-9_]*).mat",
                 "do-hash": true 
             },
             {
                 "name": "rsa-setup",
                 "match-extension": "Setup",
-                "do-hash": false
-            },
-            {
-                "name": "regexp-example",
-                "match-regexp": "project8is[A-Za-z]*",
                 "do-hash": false
             }
         ],
@@ -50,6 +45,8 @@
 			"/some/special/path",
 			"/another/path"
 		],
+		"send-file-info": true,
+		"send-to": "hornet",
 		"wait-for-sender": 2,
 		"max-jobs": 25
     },
@@ -57,7 +54,6 @@
 	"hash":
 	{
 		"required": true,
-		"send-to": "hornet",
 		"command": "md5sum",
 		"cmd-opt": "-b"
 	},
