--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -1,9 +1,7 @@
 {
     "scheduler":
     {
-        "queue-size": 100,
-        "n-nearline-workers": 5,
-        "n-shippers": 1
+        "queue-size": 100
     },
 
     "amqp":
@@ -65,6 +63,7 @@
 
     "workers":
     {
+        "n-workers": 5,
 		"jobs":
 		[
 			{
@@ -82,6 +81,7 @@
 
     "shipper":
     {
+        "n-shippers": 1,
         "dest-dir": "/remote-data",
 		"hostname": "my.server",
 		"username": "aphysicist"
