Implement use of AMQP authentication

--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -7,9 +7,11 @@
     "amqp":
     {
         "active": true,
+ 		"use-auth": "true",
         "broker": "my.server",
+		"port": 5672,
         "exchange": "requests",
-        "queue": "hornet"
+        "queue": "hornet",
      },
 
     "watcher":
