Implemented configurable log-level printing

--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -4,6 +4,11 @@
         "queue-size": 100
     },
 
+    "logger":
+    {
+        "level": "NOTICE"
+    },
+
     "amqp":
     {
         "active": true,
