New slack client internal functionality that limits the message-sending rate so that the bot won't be booted for high rates. Switched expectation for the slack authentication json structure to allow different tokens for different bot users.

--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -12,7 +12,7 @@
     "amqp":
     {
         "active": true,
-         "use-auth": "true",
+        "use-auth": "true",
         "broker": "my.server",
         "port": 5672,
         "exchange": "requests",
@@ -22,8 +22,7 @@
     "slack":
     {
         "active": false,
-        "prefix": "[hornet] ",
-        "username": "project8",
+        "username": "hornet",
         "alerts-channel": "#p8_alerts",
         "notices-channel": "#p8_notices"
     },
