Added file-wait-time to the watcher config

--- a/examples/hornet_config.json
+++ b/examples/hornet_config.json
@@ -35,7 +35,8 @@
         [
             "/otherdata1",
             "/otherdata2"
-        ]
+        ],
+        "file-wait-time": "5s"
     },
 
     "classifier":
